<resources>
    <string name="app_name">Emart</string>
    <string name="emart">E-mart</string>
    <string name="e2">Next page</string>
    <string name="login">Login</string>
    <string name="signup">Sign-up</string>
    <string name="newuser">New user</string>
    <string name="already">Already a user</string>
    <string name="lg">LOGIN</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login_button">Login</string>
    <string name="Sign">SignUp</string>
    <string name="email2">Email</string>
    <string name="pass2">Password(At least 8 char.)</string>
    <string name="b2">SignUp</string>
    <string name="title_activity_home">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>